    - document available [options] for sources.list entries (Closes: 632441)
  * doc/apt.conf.5.xml:
    - document APT::Architectures list (Closes: #612102)
  * cmdline/apt-get.cc:
    - restore all important dependencies for garbage packages (LP: #806274)
    - do not require unused partial dirs in 'source' (Closes: #633510)
    - buildconflicts effect all architectures
  * apt-pkg/init.cc:
    - use CndSet in pkgInitConfig (Closes: #629617)
  * apt-pkg/depcache.cc:
    - change default of APT::AutoRemove::SuggestsImportant to true
  * cmdline/apt-key:
    - use a tmpfile instead of /etc/apt/secring.gpg (Closes: #632596)
  * debian/apt.postinst:
    - remove /etc/apt/secring.gpg if it is an empty file
  * doc/apt-cache.8.xml:
    - apply madison typofix from John Feuerstein, thanks! (Closes: #633455)
  * apt-pkg/policy.cc:
    - emit an error on unknown APT::Default-Release value (Closes: #407511)
  * apt-pkg/aptconfiguration.cc:
    - ensure that native architecture is if not specified otherwise the
      first architecture in the Architectures vector
  * apt-pkg/deb/deblistparser.cc:
    - Strip only :any and :native if MultiArch should be stripped as it is
      save to ignore them in non-MultiArch contexts but if the dependency
      is a specific architecture (and not the native) do not strip

 -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 25 Jul 2011 12:46:19 +0200

apt (0.8.15.2) unstable; urgency=high

  * fix from David Kalnischkies for the InRelease gpg verification 
    code (LP: #784473)

 -- Michael Vogt <mvo@debian.org>  Tue, 12 Jul 2011 11:54:47 +0200

apt (0.8.15.1) unstable; urgency=low

  [ David Kalnischkies ]
  * doc/makefile:
    - create doxygen directory to avoid depending on magic (Closes: #628799)
  * cmdline/apt-key:
    - explicitly state that net-update is not supported if no url is set
    - require to be root for add, rm, update and net-update
    - clarify update vs. net-update in different distros (Closes: #632043)